--- a/Sitio/css/style.css
+++ b/Sitio/css/style.css
@@ -151,7 +151,7 @@ h6 {
   margin: 0;
   padding: 0;
   line-height: 1;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Fira Code", monospace;
   font-weight: 700;
   letter-spacing: 3px;
 }
@@ -160,7 +160,39 @@ h6 {
 #header #logo h1 a:hover {
   color: #fff;
   padding-left: 10px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #18d36e;
+}
+
+#cajalogo {
+  background-color: #000000a1;
+  width: 380px;
+  height: 290px;
+  border-radius: 15px;
+  padding-top: 15px;
+  transition: all 0.5s;
+}
+
+#cajalogo.cajalogochica {
+  background-color: transparent;
+  width: 200px;
+  height: 40px;
+  border-radius: 5px;
+  padding-top: 0px;
+  transition: all 0.5s;
+}
+
+#logo {
+  content: url("../img/logo.png");
+  float: left;
+  width: 320px;
+  transition: all 0.5s;
+  position: absolute;
+}
+
+#logo.logoInicio {
+  content: url("../img/logosolo.png");
+  width: 122px;
+  transition: all 0.5s;
 }
 
 #header #logo img {
@@ -188,7 +220,7 @@ h6 {
 }
 
 #intro .carousel-item::before {
-  content: '';
+  content: "";
   background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
   height: 100%;
@@ -563,7 +595,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .section-header h3::before {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 120px;
@@ -574,7 +606,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .section-header h3::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 40px;
@@ -651,7 +683,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   right: 0;
@@ -691,7 +723,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   border-radius: 50%;
   text-align: center;
   border: 4px solid #fff;
-  left: calc( 50% - 32px);
+  left: calc(50% - 32px);
   bottom: -30px;
   transition: 0.3s;
 }
@@ -850,7 +882,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #skills .progress-bar {
   width: 1px;
   text-align: left;
-  transition: .9s;
+  transition: 0.9s;
 }
 
 /* Facts Section
@@ -864,7 +896,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #facts::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   right: 0;
@@ -1420,7 +1452,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #footer .footer-top h4::before,
 #footer .footer-top h4::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: 0;
@@ -1539,6 +1571,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 @media (min-width: 1024px) {
   #header #logo {
     padding-left: 60px;
+    margin-top: -15px;
   }
 
   #intro p {
