--- a/Sitio/css/style.css
+++ b/Sitio/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 a {
-  color: #18d26e;
+  color: #004e56;
   transition: 0.5s;
 }
 
@@ -50,7 +50,7 @@ h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #18d26e;
+  background: #004e56;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -88,7 +88,7 @@ h6 {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #18d26e;
+  border-top: 6px solid #004e56;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -329,12 +329,12 @@ h6 {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #18d26e;
+  background: #004e56;
 }
 
 #intro .btn-get-started:hover {
   background: #fff;
-  color: #18d26e;
+  color: #004e56;
 }
 
 /*--------------------------------------------------------------
@@ -423,7 +423,7 @@ h6 {
 
 .nav-menu li:hover > a,
 .nav-menu > .menu-active > a {
-  color: #18d26e;
+  color: #004e56;
 }
 
 .nav-menu > li {
@@ -451,7 +451,7 @@ h6 {
 }
 
 .nav-menu ul li:hover > a {
-  color: #18d26e;
+  color: #004e56;
 }
 
 .nav-menu ul ul {
@@ -520,7 +520,7 @@ h6 {
 }
 
 #mobile-nav ul li a:hover {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #mobile-nav ul li li {
@@ -528,7 +528,7 @@ h6 {
 }
 
 #mobile-nav ul li.menu-active a {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #mobile-nav ul .menu-has-children i {
@@ -541,7 +541,7 @@ h6 {
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #mobile-nav ul .menu-has-children li a {
@@ -549,7 +549,7 @@ h6 {
 }
 
 #mobile-nav ul .menu-item-active {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #mobile-body-overly {
@@ -611,7 +611,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   display: block;
   width: 40px;
   height: 3px;
-  background: #18d26e;
+  background: #004e56;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -645,7 +645,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #featured-services i {
-  color: #18d26e;
+  color: #004e56;
   font-size: 48px;
   display: inline-block;
   line-height: 1;
@@ -662,7 +662,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #featured-services h4 a:hover {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #featured-services p {
@@ -676,7 +676,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #about {
-  background: url("../img/about-bg.jpg") center top no-repeat fixed;
+  background: url("../img/nosotros/1.png") center top no-repeat fixed;
   background-size: cover;
   padding: 60px 0 40px 0;
   position: relative;
@@ -689,7 +689,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(255, 255, 255, 0.92);
+  background: rgba(255, 255, 255, 0.8);
   z-index: 9;
 }
 
@@ -719,7 +719,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding-top: 8px;
   text-align: center;
   position: absolute;
-  background-color: #18d26e;
+  background-color: #004e56;
   border-radius: 50%;
   text-align: center;
   border: 4px solid #fff;
@@ -740,7 +740,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-col:hover i {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #about .about-col h2 {
@@ -757,7 +757,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-col h2 a:hover {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #about .about-col p {
@@ -786,7 +786,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .icon i {
-  color: #18d26e;
+  color: #004e56;
   font-size: 36px;
   line-height: 1;
   transition: 0.5s;
@@ -804,7 +804,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #services .box:hover .title a {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #services .description {
@@ -849,8 +849,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #call-to-action .cta-btn:hover {
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: #004e56;
+  border: 2px solid #004e56;
 }
 
 /* Call To Action Section
@@ -916,7 +916,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-weight: bold;
   font-size: 48px;
   display: block;
-  color: #18d26e;
+  color: #004e56;
 }
 
 #facts .counters p {
@@ -963,7 +963,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: #004e56;
   color: #fff;
 }
 
@@ -1023,7 +1023,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio .portfolio-item figure .link-preview:hover,
 #portfolio .portfolio-item figure .link-details:hover {
-  background: #18d26e;
+  background: #004e56;
 }
 
 #portfolio .portfolio-item figure .link-preview:hover i,
@@ -1072,7 +1072,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #portfolio .portfolio-item .portfolio-info h4 a:hover {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #portfolio .portfolio-item .portfolio-info p {
@@ -1118,7 +1118,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #clients .owl-dot.active {
-  background-color: #18d26e;
+  background-color: #004e56;
 }
 
 /* Testimonials Section
@@ -1192,7 +1192,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #testimonials .owl-dot.active {
-  background-color: #18d26e;
+  background-color: #004e56;
 }
 
 /* Team Section
@@ -1272,7 +1272,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #team .member .social a:hover {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #team .member .social i {
@@ -1296,7 +1296,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #18d26e;
+  color: #004e56;
 }
 
 #contact .contact-info address,
@@ -1318,7 +1318,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .contact-info a:hover {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #contact .contact-address,
@@ -1328,8 +1328,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form #sendmessage {
-  color: #18d26e;
-  border: 1px solid #18d26e;
+  color: #004e56;
+  border: 1px solid #004e56;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1370,7 +1370,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form button[type="submit"] {
-  background: #18d26e;
+  background: #004e56;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1410,7 +1410,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
-  border-left: 4px solid #18d26e;
+  border-left: 4px solid #004e56;
 }
 
 #footer .footer-top .footer-info p {
@@ -1437,7 +1437,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #18d26e;
+  background: #004e56;
   color: #fff;
 }
 
@@ -1465,7 +1465,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top h4::after {
-  background: #18d26e;
+  background: #004e56;
   width: 60px;
 }
 
@@ -1498,7 +1498,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: #18d26e;
+  color: #004e56;
 }
 
 #footer .footer-top .footer-contact {
@@ -1520,7 +1520,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .footer-top .footer-newsletter input[type="submit"] {
-  background: #18d26e;
+  background: #004e56;
   border: 0;
   width: 35%;
   padding: 6px 0;
